// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminEmails /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-dmctIk kfbqRZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk gNuiIb admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-lllmON IAMKh"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with emails 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk gNuiIb admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-lllmON IAMKh"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-hHTYSt cRxHgE admin-emailsstyles__Count-sc-zq6ujt-2 kkfqmh"
  >
    Showing 
    3
     of 
    3
     emails
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-kMjNwy fhpiGi"
        >
          <div
            class="sc-ilhmMj imOtvJ"
          />
          <div
            class="sc-jIRcFI kILCAE"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="email-1"
                >
                  Email 1
                </h1>
                <span
                  class="sc-hHTYSt cRxHgE"
                >
                  <br />
                  id: 
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kMjNwy fhpiGi"
        >
          <div
            class="sc-ilhmMj imOtvJ"
          />
          <div
            class="sc-jIRcFI kILCAE"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="email-2"
                >
                  Email 2
                </h1>
                <span
                  class="sc-hHTYSt cRxHgE"
                >
                  <br />
                  id: 
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-kMjNwy fhpiGi"
        >
          <div
            class="sc-ilhmMj imOtvJ"
          />
          <div
            class="sc-jIRcFI kILCAE"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="email-3"
                >
                  Email 3
                </h1>
                <span
                  class="sc-hHTYSt cRxHgE"
                >
                  <br />
                  id: 
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-dmctIk kfbqRZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk gNuiIb admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-lllmON IAMKh"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-hHTYSt cRxHgE"
  >
    <span
      class="sc-kgTSHT lXHmp"
    >
      Could not load emails
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk cGNplD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      disabled=""
      type="button"
    >
      <span
        class="sc-lllmON MPtua"
      >
        Reload emails
      </span>
      <div
        aria-hidden="true"
        class="sc-iJnaPW cQNAUh"
      >
        <div
          class="sc-fLcnxK ctWOPR"
        >
          <div
            class="sc-bBABsx kEWXMq"
          />
          <div
            class="sc-bBABsx eWwMTe"
          />
          <div
            class="sc-bBABsx jTtRPd"
          />
          <div
            class="sc-bBABsx imnVtM"
          />
          <div
            class="sc-bBABsx jwDXhX"
          />
          <div
            class="sc-bBABsx dNrBwy"
          />
          <div
            class="sc-bBABsx kbAARu"
          />
          <div
            class="sc-bBABsx bGgwNy"
          />
        </div>
      </div>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resendError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk gNuiIb admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-lllmON IAMKh"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resending=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-iveFHk gNuiIb admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-lllmON IAMKh"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-hHTYSt cRxHgE"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="/login"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Got a different admin account? Log in here.
        </span>
      </a>
    </span>
  </div>
</div>
`;
